# computerGraphics

./: .gitignore  README.md
01_tutorial/: CMakeLists.txt
01_tutorial/src/: main.cpp
02_CMake_denpendency/: CMakeLists.txt  Dependency.cmake
02_CMake_denpendency/src/: main.cpp
03_firstWindow/src/: CMakeLists.txt  Dependency.cmake  main.cpp
04_point/: CMakeLists.txt  Dependency.cmake  imgui.ini  note.txt
04_point/shader/: lighting.fs  lighting.vs  simple.fs  simple.vs
04_point/src/: buffer.cpp  common.cpp  context.cpp  context.h  image.cpp  main.cpp  program.cpp  program.h  shader.cpp  shader.h  vertex_layout.h
04_points/: CMakeLists.txt  Dependency.cmake
04_points/src/: common.cpp  context.cpp  context.h  main.cpp
05_GLSL/src/: common.h  context.cpp  program.h  vertex_layout.h
06_texture/: CMakeLists.txt
06_texture/src/: common.h  context.h
07_transformation/src/: buffer.h  main.cpp  program.cpp  texture.h
08_camera/src/: common.h  context.cpp  context.h  image.h  texture.cpp
09_light/src/: context.cpp  context.h  main.cpp  program.h
